--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sveltejs/adapter-auto": "^2.1.0",
+    "@types/wicg-file-system-access": "^2020.9.6",
     "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.2.2",
     "wasm-zip": "file:~/Documents/wasm-zip/pkg/zip-input-files-0.0.1.tgz"
